// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration adapter without timestamp encoding case [1970-01-01T00:00:01.003Z, "foo", "bar", null, 100] 1`] = `
Object {
  "data": Array [
    149,
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    164,
    68,
    97,
    116,
    101,
    165,
    118,
    97,
    108,
    117,
    101,
    184,
    49,
    57,
    55,
    48,
    45,
    48,
    49,
    45,
    48,
    49,
    84,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    49,
    46,
    48,
    48,
    51,
    90,
    163,
    102,
    111,
    111,
    163,
    98,
    97,
    114,
    192,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`integration adapter without timestamp encoding case 1970-01-01T00:00:01.010Z 1`] = `
Object {
  "data": Array [
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    164,
    68,
    97,
    116,
    101,
    165,
    118,
    97,
    108,
    117,
    101,
    184,
    49,
    57,
    55,
    48,
    45,
    48,
    49,
    45,
    48,
    49,
    84,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    49,
    46,
    48,
    49,
    48,
    90,
  ],
  "type": "Buffer",
}
`;

exports[`integration simple adapter case [1970-01-01T00:00:01.003Z, "foo", "bar", null, 100] 1`] = `
Object {
  "data": Array [
    149,
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    164,
    68,
    97,
    116,
    101,
    165,
    118,
    97,
    108,
    117,
    101,
    184,
    49,
    57,
    55,
    48,
    45,
    48,
    49,
    45,
    48,
    49,
    84,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    49,
    46,
    48,
    48,
    51,
    90,
    163,
    102,
    111,
    111,
    163,
    98,
    97,
    114,
    192,
    100,
  ],
  "type": "Buffer",
}
`;

exports[`integration simple adapter case {"date": 1970-01-01T00:00:01.002Z, "foo": "bar", "prop": 1} 1`] = `
Object {
  "data": Array [
    131,
    163,
    102,
    111,
    111,
    163,
    98,
    97,
    114,
    164,
    112,
    114,
    111,
    112,
    1,
    164,
    100,
    97,
    116,
    101,
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    164,
    68,
    97,
    116,
    101,
    165,
    118,
    97,
    108,
    117,
    101,
    184,
    49,
    57,
    55,
    48,
    45,
    48,
    49,
    45,
    48,
    49,
    84,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    49,
    46,
    48,
    48,
    50,
    90,
  ],
  "type": "Buffer",
}
`;

exports[`integration simple adapter case 1970-01-01T00:00:01.010Z 1`] = `
Object {
  "data": Array [
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    164,
    68,
    97,
    116,
    101,
    165,
    118,
    97,
    108,
    117,
    101,
    184,
    49,
    57,
    55,
    48,
    45,
    48,
    49,
    45,
    48,
    49,
    84,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    49,
    46,
    48,
    49,
    48,
    90,
  ],
  "type": "Buffer",
}
`;

exports[`integration simple adapter case Map {"key" => 1970-01-01T00:00:01.000Z, "key2" => 100, "key3" => null} 1`] = `
Object {
  "data": Array [
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    163,
    77,
    97,
    112,
    165,
    118,
    97,
    108,
    117,
    101,
    147,
    146,
    163,
    107,
    101,
    121,
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    164,
    68,
    97,
    116,
    101,
    165,
    118,
    97,
    108,
    117,
    101,
    184,
    49,
    57,
    55,
    48,
    45,
    48,
    49,
    45,
    48,
    49,
    84,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    49,
    46,
    48,
    48,
    48,
    90,
    146,
    164,
    107,
    101,
    121,
    50,
    100,
    146,
    164,
    107,
    101,
    121,
    51,
    192,
  ],
  "type": "Buffer",
}
`;

exports[`integration simple adapter case Set {1970-01-01T00:00:01.001Z, "string", null, 1000} 1`] = `
Object {
  "data": Array [
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    163,
    83,
    101,
    116,
    165,
    118,
    97,
    108,
    117,
    101,
    148,
    130,
    165,
    64,
    116,
    121,
    112,
    101,
    164,
    68,
    97,
    116,
    101,
    165,
    118,
    97,
    108,
    117,
    101,
    184,
    49,
    57,
    55,
    48,
    45,
    48,
    49,
    45,
    48,
    49,
    84,
    48,
    48,
    58,
    48,
    48,
    58,
    48,
    49,
    46,
    48,
    48,
    49,
    90,
    166,
    115,
    116,
    114,
    105,
    110,
    103,
    192,
    205,
    3,
    232,
  ],
  "type": "Buffer",
}
`;
